// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Emoji with invalid shortName 1`] = `
<div
  className="sc-bwzfXH ezkdGX"
>
  :munich:
</div>
`;

exports[`Storyshots Emoji with valid shortName 1`] = `
<div
  className="sc-bwzfXH ezkdGX"
>
  🦄
</div>
`;
